--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#42A5F5</color>
     <color name="colorPrimaryDark">#5C6BC0</color>
-    <color name="colorAccent">#E46969</color>
+    <color name="colorAccent">#26A69A</color>
 </resources>
