--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:gravity="center_horizontal"
             android:text="@string/text_view_signup"
             android:textColor="#5F5F67"
-            android:textSize="30sp" />
+            android:textSize="28sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -89,7 +89,7 @@
             android:hint="@string/hint_email">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_text_username"
+                android:id="@+id/edit_text_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
