--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -1,31 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="40dp"
-    tools:context=".PreviewActivity">
+    android:padding="45dp"
+    tools:context=".RegistrationActivity">
 
-    <androidx.cardview.widget.CardView
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/image_view_app_logo"
+        android:scaleType="centerCrop"
+        android:src="@drawable/rocket_1976107_1280" />
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#FFA726"
-        app:cardCornerRadius="4dp"
-        app:cardUseCompatPadding="true">
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center_horizontal"
+        android:textColor="#5F5F67"
+        android:textSize="28sp"
+        tools:text="@string/text_view_checkout" />
 
-        <TextView
-            android:id="@+id/text_view_signup_summary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:fontFamily="sans-serif-medium"
-            android:textSize="20sp"
-            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
+    <TextView
+        android:id="@+id/text_view_preview_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp"
+        tools:text="Mr Fullname User"
+        />
 
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/text_view_preview_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp"
+        tools:text="email@example.com" />
+
+    <TextView
+        android:id="@+id/text_view_preview_phone_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp"
+        tools:text="51848 816156" />
 
 
-
-</ScrollView>
+</LinearLayout>
