--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:background="@color/colorOnBackground"
     android:orientation="vertical"
     android:padding="45dp"
     tools:context=".RegistrationActivity">
@@ -31,8 +32,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-medium"
         android:textSize="16sp"
-        tools:text="Mr Fullname User"
-        />
+        tools:text="Mr Fullname User" />
 
     <TextView
         android:id="@+id/text_view_preview_email"
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-medium"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         tools:text="email@example.com" />
 
@@ -49,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-medium"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         tools:text="51848 816156" />
 
