--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#42A5F5</color>
     <color name="colorPrimaryDark">#5C6BC0</color>
     <color name="colorAccent">#26A69A</color>
+    <color name="colorOnBackground">#E1F5FE</color>
 </resources>
